test/should-fail/vsgc2677-a.f3
/**
 * Ensure that incorrectly specified sequences are not longer allowed
 * by the parser.
 * @test/compile-error
 */
package t1;

se= [];
se= [,];
se= [6,];
se= [,6,];
se= [6,];


